antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__status_line_model_with_reasoning_fast_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 4193
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
" ┃ Ask Antex to do anything                                                     "
"                                                                                "
"  gpt-5.4 xhigh fast · Context 0% used · /tmp/project · ⚡                      " Hidden by multi-width symbols: [(57, " ")]
